fix: prevent NO Double Sneak from disabling sneak animation on other players and update version to 0.8.7